<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/settings_head"
        layout="@layout/toolbar_back" />

    <LinearLayout
        style="@style/MenuLinearLayout"
        app:layout_constraintTop_toBottomOf="@id/settings_head"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:layout_width="match_parent"
            android:layout_height="@dimen/menu_button_layout_height"
            android:text="@string/dark_theme"
            android:textSize="@dimen/text_medium" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/settings_button_share_app"
            style="@style/MenuButtonStyle"
            android:text="@string/share_app"
            app:icon="@drawable/ic_share" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/settings_button_write_to_support"
            style="@style/MenuButtonStyle"
            android:text="@string/write_to_support"
            app:icon="@drawable/ic_support" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/settings_button_user_agreement"
            style="@style/MenuButtonStyle"
            android:text="@string/user_agreement"
            app:icon="@drawable/ic_arrow_forward" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>