<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_menu_background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/padding_horizontal"
        android:paddingBottom="@dimen/padding_bottom">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_marginBottom="14dp"
            android:gravity="center"
            android:text="@string/app_name_lowercase"
            android:textColor="@color/white"
            android:textFontWeight="500"
            android:textSize="@dimen/text_large" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/main_button_search"
            style="@style/MainMenuButtonStyle"
            android:text="@string/search"
            app:icon="@drawable/ic_search" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/main_button_media_library"
            style="@style/MainMenuButtonStyle"
            android:text="@string/media_library"
            app:icon="@drawable/ic_media_library" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/main_button_settings"
            style="@style/MainMenuButtonStyle"
            android:text="@string/settings"
            app:icon="@drawable/ic_settings" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

