<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">

    <include
        android:id="@+id/search_head"
        layout="@layout/toolbar_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/search_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/padding_horizontal"
        android:layout_marginTop="@dimen/small_margin"
        android:background="@drawable/search_bar_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_head">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="@dimen/small_margin"
            android:contentDescription="@string/search_icon_description"
            android:src="@drawable/ic_search_bar_search"
            app:tint="@color/search_bar_text" />

        <EditText
            android:id="@+id/input_edit_text"
            android:layout_width="0dp"
            android:layout_height="@dimen/search_bar_height"
            android:layout_weight="1"
            android:autofillHints="search"
            android:background="@null"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textColorHint="@color/search_bar_text"
            android:textFontWeight="500"
            android:textSize="@dimen/text_medium" />

        <ImageView
            android:id="@+id/clear_icon"
            android:layout_width="@dimen/search_bar_height"
            android:layout_height="@dimen/search_bar_height"
            android:layout_gravity="center"
            android:contentDescription="@string/clear"
            android:scaleType="center"
            android:src="@drawable/ic_search_bar_clear"
            android:visibility="invisible"
            app:tint="@color/search_bar_text" />

    </LinearLayout>

    <TextView
        android:id="@+id/search_history_header"
        android:layout_width="0dp"
        android:layout_height="@dimen/track_element_height"
        android:layout_marginTop="@dimen/medium_margin"
        android:gravity="center"
        android:text="@string/your_searching"
        android:textColor="?attr/colorOnPrimary"
        android:textFontWeight="500"
        android:textSize="@dimen/text_ml"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_bar"
        tools:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/track_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/padding_horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_history_header"
        app:layout_goneMarginTop="@dimen/medium_margin"
        tools:listitem="@layout/track_list_element" />

    <LinearLayout
        android:id="@+id/search_place_holder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/padding_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_bar"
        app:layout_constraintVertical_bias="0.3"
        tools:visibility="gone">

        <ImageView
            android:id="@+id/search_place_holder_ic"
            style="@style/search_place_holder"
            tools:ignore="ContentDescription"
            tools:src="@drawable/ic_search_not_found" />

        <TextView
            android:id="@+id/search_place_holder_text"
            style="@style/search_place_holder"
            android:layout_marginTop="16dp"
            tools:text="Ничего не нашлось" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/search_place_holder_update_button"
            style="@style/oval_button"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/large_margin"
            android:text="@string/update" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>